--- a/README
+++ b/README
@@ -1,14 +1,17 @@
-CMAKE (Generate Makefiles)
+CMake (Generate Makefiles)
 
 create a build directory and change to it
-run:
- $ cmake <src_dir>
+ $ mkdir <build/dir>
+ $ cd <build/dir>
+
+run cmake and point to the LAMA-src dir:
+ $ cmake <src/dir>
 
 You can set environment variables in one of the following ways:
 
   export ENV1=<value1>
   export ENV2=<value2>
-  cmake <src_dir>
+  cmake <src/dir>
 
   or
 
@@ -17,58 +20,41 @@ You can set environment variables in one of the following ways:
 The following environment variables might be helpful to find
 all required and optional packages:
 
-  BOOST_ROOT=<install-dir-of-boost>
-  CPPUNIT_ROOT=<install-dir-of-cppunit>
-  MKL_ROOT=<install-dir-of-MKL>
+  BOOST_ROOT=<install/dir/of/boost>
+  MKL_ROOT=<install/dir/of/MKL>
 
 For MPI, you should have mpicc or mpicxx in your path. CMake will then
 identify the vendor and necessary link flags for MPI compilation.
 
+For a Release build define -D CMAKE_BUILD_TYPE=Release.
+
+To install LAMA tell CMake the install dir by -D CMAKE_INSTALL_DIR=<path/to/lama/install/dir>
+
 To build with the intel compiler execute
- $ export CC=<c-compiler>
- $ export CXX=<c++-compiler>
- $ mkdir <build-dir>
- $ cd <build-dir>
- $ cmake [-D CMAKE_INCLUDE_PATH=<install_dir>/include \]
-         [-D CMAKE_LIBRARY_PATH=<install_dir>/lib \]
-         [-D DOXYGEN_EXECUTABLE=<doxygen_bin> \]
-         <src_dir>
+ $ export CC=<c/compiler>
+ $ export CXX=<c++/compiler>
 
 BUILD
 
  $ make
 
-RUN TESTS
+INSTALL
 
- $ make test
- 
-RUN SPECIFIC TEST
+ $ make install
 
- $ make <TestName>
- 
- <TestName> depends on the cpp file in src/tests and is listed during 
- the cmake execution
- 
 RUN DOXYGEN (GENERATE DOCUMENTATION)
 
  $ make doc
 
-RUN MEMORY CHECK ON UNIT TESTS (VALGRIND)
-
- $ make valgrind
- 
-RUN SPECIFIC TEST + VALGRIND
-
- $ make <TestName>_valgrind
-
-OPTIONAL ENVIRONMENT VARIABLES TO INFLUENCE THE CMAKE PROCEDURE
- CPPUNIT_PATH ## example: $ export CPPUNIT_PATH=$HOME/local_inst/lib64
-
 REQUIREMENTS
- * Fortran and C++ compiler
+ * C/C++/Fortran compiler (optional: OpenMP 2.0)
  * CMake >= 2.8
- * Boost-Library (common, test, thread, program-options)
- * MPI
- * Documentation:
+ * Boost-Library (common, thread, test and regex(optional for tests), program-options (optional for converter), spirit (optinal for metasolver))
+ * BLAS-Library (Intel MKL, Fortran BLAS)
+ * MPI (optional)
+ * Documentation (optional):
    - doxygen for generating the documentation
    - graphviz for UML-Graphs
+   
+   - sphinx for user documentation
+   - latex for pdf creation of user documentation
