--- a/scai/doc/sphinx/_images/LAMA_Hierarchy3.tex
+++ b/scai/doc/sphinx/_images/LAMA_Hierarchy3.tex
@@ -109,7 +109,7 @@
 };
 
 % |- Heterogenous Computing Development Kit
-\draw[subEntry] node(devkit) at(lvl2) {\textbf{\Umbruch[26em]{Heterogenous Computing Development Kit}}};
+\draw[subEntry] node(devkit) at(lvl2) {\textbf{\Umbruch[26em]{Heterogeneous Computing Development Kit}}};
 
 
 % ============================
