--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@
 
 2016-06-15    Fraunhofer SCAI
 
-VERSION 2.0.0 (15.06.2016):
+VERSION 2.0.0 (15.06.2016 - Barrancas Blancas):
 
  * switch to AGPL license
  * new project structure with well-designed subprojects.
@@ -34,7 +34,7 @@ VERSION 1.0.1 (20.06.2013):
  - dot product only available as vec.dotProduct() not as expression,
  	because of confusion of scaling a vector component-by-component
 
-VERSION 1.0.0 (22.05.2013):
+VERSION 1.0.0 (22.05.2013 - Alpamayo):
 
  * first official LAMA release under the MIT license
    * enables lineare algebra operations via text-book-syntax
